# Inventory

./: README.md  pyproject.toml
backend/: app.py  logic.py
frontend/: index.html  style.css
